--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-primer
-title: Support Vector Olives
-description: Keeping Italian Olives Pure!
+title: Motivation
+description: Predicting crime in US Metropolitan Statistical Areas
 baseurl:
 markdown: kramdown
 kramdown:
